[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/game/ui/GameOverMenu.gd" type="Script" id=1]

[node name="GameOverMenu" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Main" type="Control" parent="."]
pause_mode = 2
margin_right = 335.0
margin_bottom = 203.0
rect_scale = Vector2( 0.8, 0.8 )

[node name="ColorRect" type="ColorRect" parent="Main"]
self_modulate = Color( 1, 1, 1, 0.737255 )
anchor_left = 0.3
anchor_top = 0.3
anchor_right = 0.72
anchor_bottom = 0.7
color = Color( 0, 0, 0, 0.807843 )

[node name="Buttons" type="VBoxContainer" parent="Main"]
anchor_left = 0.4
anchor_top = 0.45
anchor_right = 0.85
anchor_bottom = 0.9
rect_scale = Vector2( 0.5, 0.5 )
rect_pivot_offset = Vector2( 0.5, 0 )
size_flags_horizontal = 3
alignment = 1

[node name="StartButton" type="Button" parent="Main/Buttons"]
margin_top = 23.0
margin_right = 150.0
margin_bottom = 43.0
grow_horizontal = 2
grow_vertical = 0
text = "Restart"

[node name="ExitButton" type="Button" parent="Main/Buttons"]
margin_top = 47.0
margin_right = 150.0
margin_bottom = 67.0
grow_horizontal = 2
text = "Exit"

[node name="TitleLabel" type="Label" parent="Main"]
anchor_left = 0.3
anchor_top = 0.3
anchor_right = 0.88
anchor_bottom = 0.3
margin_top = 10.0
margin_bottom = 14.3
rect_scale = Vector2( 0.7, 0.7 )
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Game Over"
align = 1

[connection signal="pressed" from="Main/Buttons/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Main/Buttons/ExitButton" to="." method="_on_exit_button_pressed"]
